--- a/templates/application.html
+++ b/templates/application.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>tomatodo</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -70,16 +71,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="well well-sm jobs"></div>
-                </div>
-                <div class="col-md-4">
-                    <div class="well well-sm tomato">
-                        <img class="clock" src="../static/icons/clocks.svg"/>
-                        <a href="#fakelink" class="btn btn-block btn-lg btn-primary">Start New Tomato</a>
+                    <div class="well well-sm jobs">
+                        <img class="icon" src="../static/icons/loop.svg"/>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="well well-sm todo"></div>
+                    <div class="well well-sm tomato">
+                        <img class="icon" src="../static/icons/clocks.svg"/>
+                        <a class="btn btn-block btn-lg btn-primary">Start New Tomato</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="well well-sm todo">
+                        <input type="text" value="" placeholder="添加任务" class="form-control">
+                        <img class="icon" src="../static/icons/clipboard.svg"/>
+                    </div>
                 </div>
             </div>
         </div>
@@ -96,8 +102,8 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/bootstrap-switch.js"></script>
-    <script src="../static/js/bootstrap-select.js"></script>
+    <!--<script src="../static/js/bootstrap-switch.js"></script>-->
+    <!--<script src="../static/js/bootstrap-select.js"></script>-->
     <script src="../static/js/flatui-checkbox.js"></script>
     <script src="../static/js/flatui-radio.js"></script>
   </body>
