添加任务计时器功能

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,11 @@ body{
     padding-bottom: 30px;
     padding-top: 50px;
     background-color: #1ABC9C;
-    min-height: 380px;
+    
+}
+
+.jumps .well{
+    min-height: 280px;
 }
 
 .jumps .jobs,.tomato,.todo{
@@ -42,8 +46,7 @@ body{
     border-radius: 5px 5px 0px 0px;
     background-color: #1ABC9C;
     border-bottom: none;
-    min-height: 260px;
-
+   
 }
 
 .jumps .jobs,.todo .icon{
@@ -52,6 +55,16 @@ body{
 
 .jumps .tomato{
 
+}
+
+.jumps .tomato .clock_display{
+    text-align: center;
+    font-size: 50px;
+    vertical-align: middle;
+    height: 240px;
+    height: 240px;
+    line-height: 200px;
+    font-weight: bolder;
 }
 
 .jumps .icon{
