--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,6 @@ body{
     padding-bottom: 30px;
     padding-top: 50px;
     background-color: #1ABC9C;
-    
 }
 
 .jumps .well{
@@ -41,21 +40,53 @@ body{
     text-align: center;
 }
 
-.jumps .jobs, .todo{
+.jumps .todo{
     border-width: 4px;
     border-radius: 5px 5px 0px 0px;
     background-color: #1ABC9C;
     border-bottom: none;
-   
+}
+
+.jumps .jobs{
+    border-width: 4px;
+    border-radius: 5px 5px 0px 0px;
+    background-color: #1ABC9C;
+    border-top: none;
 }
 
 .jumps .jobs,.todo .icon{
-    opacity: 0.9;
+
 }
 
 .jumps .tomato{
 
 
+}
+
+#tomato-list{
+    padding: 0px;
+}
+
+#tomato-list li{
+
+    background-color: #EDEFF1;
+    list-style: none;
+    background-size: 20px 20px;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 1.214;
+    margin-top: 2px;
+    position: relative;
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+
+}
+
+#tomato-list .tomato-item label{
+    color: #1ABC9C;
+    font-size: 17px;
+    margin: 1px 0 3px;
+   font-family: "Lato", Helvetica, Arial, sans-serif;
 }
 
 .jumps .tomato  .icon{
