--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,12 +50,12 @@ body{
     min-height: 280px;
 }
 
-.jumps .jobs,.tomato,.todo{
+.jumps .jobs,.tomato,itodo{
     padding-top: 20px;
     text-align: center;
 }
 
-.jumps .todo{
+.jumps .itodo{
     border-width: 4px;
     border-radius: 5px 5px 0px 0px;
     background-color: #EDEFF1;
@@ -69,7 +69,7 @@ body{
     border-top: none;
 }
 
-.jumps .jobs,.todo .icon{
+.jumps .jobs,.itodo .icon{
 
 }
 
@@ -78,76 +78,6 @@ body{
 
 }
 
-#tomato-list{
-    padding: 0px;
-    overflow: auto;
-    height: 232px;
-}
-
-#tomato-list li{
-
-    padding: 8px;
-    background-color: #FFF;
-    border:2px solid #FFF;
-    list-style: none;
-    background-size: 20px 20px;
-    cursor: pointer;
-    font-size: 14px;
-    line-height: 1.214;
-    margin-top: 2px;
-    position: relative;
-    -webkit-transition: 0.25s;
-    transition: 0.25s;
-    border-radius: 5px;
-
-}
-
-#tomato-list li:hover{
-    /*border:2px solid #1ABC9C;*/
-}
-
-#tomato-list li .tomato-edit{
-    display: none;
-}
-
-#tomato-list .editing .tomato-edit{
-    display: block;
-}
-
-#tomato-list .editing:hover .tomato-trash{
-    display: none;
-}
-
-#tomato-list li:hover .tomato-trash{
-    display: block;
-}
-
-#tomato-list .editing .tomato-name,.tomato-trash{
-    display: none;
-}
-
-#tomato-list .tomato-item .tomato-name h6{
-    color: #34495E;
-    font-size: 14px;
-    font-family: "Lato", Helvetica, Arial, sans-serif;
-    display: inline-block;
-    float: left;
-    margin:0;
-    margin-left: 5px;
-    text-align: left;
-}
-
-#tomato-list .tomato-item .tomato-created{
-    color:#1ABC9C;
-    font-size:12px;
-}
-
-
-#tomato-list .tomato-item .tomato-trash{
-    float: right;
-    margin-right: 15px;
-    display: none;
-}
 
 .jumps .tomato  .icon{
     margin-top: 60px;
@@ -193,6 +123,88 @@ body{
     margin-top:30px;
 }
 
-.todo #todo-list,#todo-empty{
+#todo-list,#todo-empty{
     display: none;
+}
+
+#todo-empty{
+    text-align: center;
+}
+
+
+#todo-list{
+
+
+}
+
+
+#tomato-list{
+    padding: 0px;
+    overflow: auto;
+    height: 232px;
+}
+
+.list, .item{
+
+    padding: 4px;
+    background-color: #FFF;
+    border:2px solid #FFF;
+    list-style: none;
+    background-size: 20px 20px;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 1.214;
+    margin-top: 2px;
+    position: relative;
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+    border-radius: 5px;
+    border-bottom: 1px dashed #DDD;
+
+}
+
+.list .item .trash{
+    float: right;
+    margin-right: 15px;
+    display: none;
+}
+
+
+.list .item:hover .trash{
+    display: block;
+}
+
+.list .editing .title{
+    display: none;
+}
+
+
+
+.list .editing:hover .trash{
+    display: none;
+}
+
+.list .item .tomato-edit{
+    display: none;
+}
+
+.list .editing .tomato-edit{
+    display: block;
+}
+
+
+.list .item .title h6{
+    color: #34495E;
+    font-size: 14px;
+    font-family: "Lato", Helvetica, Arial, sans-serif;
+    display: inline-block;
+    float: left;
+    margin:0;
+    margin-left: 5px;
+    text-align: left;
+}
+
+.list .item .created{
+    color:#1ABC9C;
+    font-size:12px;
 }
