可以修改已经添加的Todo

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -184,11 +184,11 @@ body{
     display: none;
 }
 
-.list .item .tomato-edit{
+.list .item .edit{
     display: none;
 }
 
-.list .editing .tomato-edit{
+.list .editing .edit{
     display: block;
 }
 
