--- a/templates/application.html
+++ b/templates/application.html
@@ -85,7 +85,7 @@
                   <div class="well well-sm tomato">
                       <div class='trigger'>
                         <img class="icon" src="../static/icons/clocks.svg"/>
-                        <a class="btn-start btn btn-block btn-lg btn-primary ">开始一个新的番茄</a>
+                        <a class="btn-start btn btn-block btn-lg btn-primary ">开始工作</a>
                       </div>
                       <div class='clock'>
                           <div class="clock_display">即将开始...</div>
@@ -125,8 +125,8 @@
               <h6>
                   <label class="toggle checkbox" >
                     <span class="icons"><span class="first-icon fui-checkbox-unchecked"></span><span class="second-icon fui-checkbox-checked"></span></span><input type="checkbox" value="" data-toggle="checkbox">
-                     &nbsp;<%=title %>&nbsp;<span class="created"><%=created_at %></span>
                   </label>
+                   &nbsp;<%=title %>&nbsp;<span class="created"><%=created_at %></span>
               </h6>
             </div>
             <div class="trash" title="删除">
