--- a/templates/application.html
+++ b/templates/application.html
@@ -91,7 +91,7 @@
                       <div class='clock'>
                           <div class="clock_display">即将开始...</div>
                           <div>
-                              <a id="btn_giveup" href="#">放弃这个番茄...</a>
+                              <a id="btn_giveup"  class="btn btn-block btn-lg btn-danger">放弃</a>
                               <a class="clock_info">休息时间</a>
                           </div>
 
@@ -109,8 +109,8 @@
                     <div class="well well-sm jobs">
                         <div id="tomato-list" class="list"></div>
                         <div id="tomato-status">
-                             <img class="icon" src="../static/icons/loop.svg"/>
-                             <div>还没有完成的Tomoto</div>
+                             <img class="icon" src="../static/icons/pencils.svg"/>
+                             <div>还未完成任何工作</div>
                         </div>
                     </div>
                 </div>
