--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-1">
-                <div class="login-icon">
+                <div class="login-icon" style="display:none">
                     <img src="/static/images/icon.png" alt="Welcome to Mail App">
                     <h4>Welcome to <small>Mail App</small></h4>
                  </div>
@@ -28,17 +28,16 @@
             <div class="col-md-4">
                 <div class="login-form">
                     <div class="form-group">
-                      <input type="text" class="form-control login-field" value="" placeholder="Enter your name" id="login-name">
+                      <input type="text" class="form-control login-field" value="" placeholder="登录邮箱" id="login-name">
                       <label class="login-field-icon fui-user" for="login-name"></label>
                     </div>
-
                     <div class="form-group">
-                      <input type="password" class="form-control login-field" value="" placeholder="Password" id="login-pass">
+                      <input type="password" class="form-control login-field" value="" placeholder="登录密码" id="login-pass">
                       <label class="login-field-icon fui-lock" for="login-pass"></label>
                     </div>
-
-                    <a class="btn btn-primary btn-lg btn-block" href="#">Login</a>
-                    <a class="login-link" href="#">Lost your password?</a>
+                    <a class="btn btn-primary btn-lg btn-block" href="#">登录</a>
+                    <a class="login-link" href="#">注册新账号</a>
+                    <a class="login-link" href="#">忘记密码?</a>
                  </div>
             </div>
             <div class="col-md-3"></div>
@@ -50,10 +49,6 @@
     <script src="../static/js/lib/backbone.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/lib/bootstrap.min.js"></script>
-    <!--<script src="../static/js/bootstrap-switch.js"></script>-->
-    <!--<script src="../static/js/bootstrap-select.js"></script>-->
-    <script src="../static/js/lib/flatui-checkbox.js"></script>
-    <script src="../static/js/lib/flatui-radio.js"></script>
-
+    <script src="../static/js/plugin/login.js"></script>
   </body>
 </html>
