--- a/templates/regist.html
+++ b/templates/regist.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
+  <head>
+    <title>TT-番茄</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="../static/css/flat-ui.css" rel="stylesheet" media="screen">
+    <link href="../static/css/login.css" rel="stylesheet" media="screen">
+    <link rel="shortcut icon" href="../static/icons/favicon.ico">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="../static/js/html5shiv.js"></script>
+      <script src="../static/js/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-1">
+                <div class="login-icon" style="display:none">
+                    <img src="/static/images/icon.png" alt="Welcome to Mail App">
+                    <h4>Welcome to <small>Mail App</small></h4>
+                 </div>
+            </div>
+            <div class="col-md-4">
+                <div class="login-form">
+                    <form id="regist-form" method="post">
+                        <div class="form-group">
+                          <input type="text" class="form-control login-field" value="" placeholder="电子邮箱" id="email" name="email">
+                          <label class="login-field-icon fui-user" for="email"></label>
+                        </div>
+                        <a class="btn btn-primary btn-lg btn-block btn-submit" href="#">注册</a>
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="../static/js/lib/jquery.js"></script>
+    <script src="../static/js/lib/underscore.js"></script>
+    <script src="../static/js/lib/backbone.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="../static/js/lib/bootstrap.min.js"></script>
+    <script src="../static/js/plugin/regist.js"></script>
+  </body>
 </html>
