添加用户退出登录的处理

--- a/templates/application.html
+++ b/templates/application.html
@@ -60,7 +60,7 @@
                               </a>
                           </li>
                           <!--<li rel="4" class="selected"><a tabindex="-1" href="#" class=""><span class="pull-left">Logout</span></a></li>-->
-                          <li rel="4"><a tabindex="-1" href="#" class=""><span class="pull-left">Logout</span></a></li>
+                          <li rel="4"><a tabindex="-1" href="/sigout" class=""><span class="pull-left">注销</span></a></li>
                       </ul>
                     </div>
 
