--- a/templates/login.html
+++ b/templates/login.html
@@ -36,7 +36,7 @@
                       <label class="login-field-icon fui-lock" for="login-pass"></label>
                     </div>
                     <a class="btn btn-primary btn-lg btn-block" href="#">登录</a>
-                    <a class="login-link" href="#">注册新账号</a>
+                    <a class="login-link" href="/sigup">注册新账号</a>
                     <a class="login-link" href="#">忘记密码?</a>
                  </div>
             </div>
