--- a/templates/regist.html
+++ b/templates/regist.html
@@ -29,7 +29,7 @@
                 <div class="login-form">
                     <form id="regist-form" method="post">
                         <div class="form-group">
-                          <input type="text" class="form-control login-field" value="" placeholder="电子邮箱" id="email" name="email">
+                          <input type="text" class="form-control login-field" value="" placeholder="请输入你的电子邮箱地址" id="email" name="email">
                           <label class="login-field-icon fui-user" for="email"></label>
                         </div>
                         <a class="btn btn-primary btn-lg btn-block btn-submit" href="#">注册</a>
