--- a/templates/application.html
+++ b/templates/application.html
@@ -84,7 +84,7 @@
                 <div id="tomato" class="col-md-4">
                   <div class="well well-sm tomato">
                       <div class='trigger'>
-                        <img class="icon" src="../static/icons/clocks.svg"/>
+                        <img class="icon tomato-clock" src="../static/icons/clocks.svg"/>
                         <a class="btn-start btn btn-block btn-lg btn-primary ">开始工作</a>
                         <a class="btn-start-rest btn btn-block btn-lg btn-default">开始休息</a>
                       </div>
