--- a/templates/application.html
+++ b/templates/application.html
@@ -24,11 +24,11 @@
               </div>
               <div class="col-md-3">
                    <div class="btn-group">
-                      <a class="btn btn-primary active"><span class="glyphicon glyphicon-dashboard"></span></a>
-                      <a class="btn btn-primary" ><span class="glyphicon glyphicon-camera"></span></a>
+                      <a class="btn btn-primary active" title="主页"><span class="glyphicon glyphicon-dashboard"></span></a>
+                      <a class="btn btn-primary" title="数据统计"><span class="glyphicon glyphicon-camera"></span></a>
                       <a class="btn btn-primary" ><span class="glyphicon glyphicon-check"></span></a>
                       <span class="dropdown-arrow dropdown-arrow-inverse"></span>
-                      <a class="btn btn-primary" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span></a>
+                      <a class="btn btn-primary" data-toggle="dropdown" title="设置"><span class="glyphicon glyphicon-cog"></span></a>
                       <span class="dropdown-arrow dropdown-arrow-inverse"></span>
                       <ul class="dropdown-menu dropdown-inverse" role="menu" style="overflow-y: auto; min-height: 108px;margin-left: 3px;">
                           <li rel="0">
