--- a/templates/application.html
+++ b/templates/application.html
@@ -89,12 +89,12 @@
                         <a class="btn-start-rest btn btn-block btn-lg btn-default">开始休息</a>
                       </div>
                       <div class='clock'>
-                          <div class="clock_display">即将开始...</div>
+                          <img class="icon tomato-clock run" src="../static/icons/clocks.svg"/>
+                          <div class="clock_display"></div>
                           <div>
                               <a id="btn_giveup"  class="btn btn-block btn-lg btn-danger">放弃</a>
                               <a class="clock_info">休息时间</a>
                           </div>
-
                       </div>
                       <div class="summary">
                         <div class="form-group">
@@ -120,7 +120,16 @@
     <div class="footer">
         <div class="container">
             <div style="text-align: center">
-                 <h3>Tomato Todo</h3>
+                 <ul class="bs-masthead-links">
+                    <li class="current-version">
+                      <a >v0.0.1</a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/yunlzheng/tomatodo">github</a>
+                    </li>
+                    <li><a href="http://shareks.tumblr.com">blog</a></li>
+		    <li>@copyright 2013 yunlzheng</li>
+                  </ul>
             </div>
 
         </div>
