--- a/templates/application.html
+++ b/templates/application.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="../static/css/flat-ui.css" rel="stylesheet" media="screen">
+    <link href="../static/css/flat-ui.min.css" rel="stylesheet" media="screen">
     <link href="../static/css/style.css" rel="stylesheet" media="screen">
     <link rel="shortcut icon" href="../static/icons/favicon.ico">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
