添加设置面板

--- a/templates/application.html
+++ b/templates/application.html
@@ -8,6 +8,7 @@
     <link href="../static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="../static/css/flat-ui.min.css" rel="stylesheet" media="screen">
     <link href="../static/css/style.css" rel="stylesheet" media="screen">
+    <link href="../static/css/settings.css" rel="stylesheet" media="screen">
     <link rel="shortcut icon" href="../static/icons/favicon.ico">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -60,6 +61,7 @@
                               </a>
                           </li>
                           <!--<li rel="4" class="selected"><a tabindex="-1" href="#" class=""><span class="pull-left">Logout</span></a></li>-->
+                          <li rel="4"><a tabindex="-2" href="#settings"><span class="pull-left">settings</span></a></li>
                           <li rel="4"><a tabindex="-1" href="/sigout" class=""><span class="pull-left">注销</span></a></li>
                       </ul>
                     </div>
@@ -134,6 +136,8 @@
 
         </div>
     </div>
+
+    
 
     <script type="text/template" id="tpl-todo-item">
             <div class="title">
